# image-library

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  log.txt  vcpkg.json
TinyImageBenchmark/: CMakeLists.txt  main.cpp
TinyImageLibrary/: CMakeLists.txt  opencv_tiny_image.cpp  opencv_tiny_image.h  opengl_tiny_image.cpp  opengl_tiny_image.h  tiny_image_factory.cpp  tiny_image_factory.h  tiny_image_interface.h
TinyImageLibraryTest/: CMakeLists.txt  opencv_tiny_image_test.cpp  opencv_tiny_image_test.h  tiny_image_test.cpp  tiny_image_test.h
ZoomApp/: CMakeLists.txt  main.cpp  zoom_app.json
